refactor：全局异常处理器